continue, upscale ok, need fix upload to arweave

--- a/package.json
+++ b/package.json
@@ -12,18 +12,27 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
+    "crypto-browserify": "^3.12.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.4",
     "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.1",
-  "vitest": "^2.0.5",
-  "@testing-library/react": "^16.0.0",
-  "@testing-library/jest-dom": "^6.4.2",
-  "@types/node": "^20.14.12"
+    "vitest": "^2.0.5"
   }
 }
